--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -13,23 +13,11 @@
   line-height: 26px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
 
-  color: #8c8c8c;
+//   color: #8c8c8c;
 
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-// ion-button::part(native) {
-//   margin-bottom: 30px;
+//   margin: 0;
 // }
-
-.button-container {
-  margin-bottom: 30px;
-}
