--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,6 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-icon size="large" src="../../../assets/icon/omelette.svg"></ion-icon>
+    </ion-buttons>
     <ion-title class="ion-text-center" size="small">
       Omelette Du Fromage
     </ion-title>
